crates/pgls_pretty_print/tests/snapshots/multi/tests__transactions_80.snap
---
source: crates/pgls_pretty_print/tests/tests.rs
input_file: crates/pgls_pretty_print/tests/data/multi/transactions.sql
snapshot_kind: text
---
BEGIN;

CREATE TABLE xacttest (
  a SMALLINT,
  b REAL
);

INSERT INTO xacttest
VALUES
  (56, 7.8),
  (100, 99.097),
  (0, 0.09561),
  (42, 324.78);

INSERT INTO xacttest (a, b) VALUES (777, 777.777);

COMMIT;

SELECT a FROM xacttest WHERE a > 100;

BEGIN;

CREATE TABLE disappear (a INT);

DELETE FROM xacttest;

SELECT * FROM xacttest;

ROLLBACK;

SELECT oid FROM pg_class WHERE relname = 'disappear';

SELECT * FROM xacttest;

BEGIN ISOLATION LEVEL SERIALIZABLE;

SELECT COUNT(*) FROM xacttest;

RESET transaction_isolation;

COMMIT;

BEGIN READ ONLY;

SELECT COUNT(*) FROM xacttest;

RESET transaction_read_only;

COMMIT;

BEGIN DEFERRABLE;

SELECT COUNT(*) FROM xacttest;

RESET transaction_deferrable;

COMMIT;

CREATE FUNCTION errfunc()
RETURNS INT
LANGUAGE "sql"
AS 'SELECT 1'
SET transaction_read_only = 'on';

CREATE TABLE writetest (a INT);

CREATE TEMPORARY TABLE temptest (a INT);

BEGIN;

SET TRANSACTION ISOLATION LEVEL SERIALIZABLE READ ONLY DEFERRABLE;

SELECT * FROM writetest;

SET TRANSACTION READ WRITE;

COMMIT;

BEGIN;

SET TRANSACTION READ ONLY;

SET TRANSACTION READ WRITE;

SET TRANSACTION READ ONLY;

SELECT * FROM writetest;

SAVEPOINT x;

SET TRANSACTION READ ONLY;

SELECT * FROM writetest;

SET TRANSACTION READ ONLY;

SET TRANSACTION READ WRITE;

COMMIT;

BEGIN;

SET TRANSACTION READ WRITE;

SAVEPOINT x;

SET TRANSACTION READ WRITE;

SET TRANSACTION READ ONLY;

SELECT * FROM writetest;

SET TRANSACTION READ ONLY;

SET TRANSACTION READ WRITE;

COMMIT;

BEGIN;

SET TRANSACTION READ WRITE;

SAVEPOINT x;

SET TRANSACTION READ ONLY;

SELECT * FROM writetest;

ROLLBACK TO SAVEPOINT x;

SHOW "transaction_read_only";

SAVEPOINT y;

SET TRANSACTION READ ONLY;

SELECT * FROM writetest;

RELEASE SAVEPOINT y;

SHOW "transaction_read_only";

COMMIT;

SET SESSION CHARACTERISTICS AS TRANSACTION READ ONLY;

DROP TABLE "writetest";

INSERT INTO writetest VALUES (1);

SELECT * FROM writetest;

DELETE FROM temptest;

UPDATE temptest
SET a = 0
FROM writetest
WHERE
  temptest.a = 1 AND
  writetest.a = temptest.a;

UPDATE writetest SET a = 0;

EXECUTE test;

SELECT * FROM writetest, temptest;

CREATE TABLE test AS SELECT * FROM writetest;

START TRANSACTION READ WRITE;

DROP TABLE "writetest";

COMMIT;

SET SESSION CHARACTERISTICS AS TRANSACTION READ WRITE;

CREATE TABLE trans_foobar (a INT);

BEGIN;

CREATE TABLE trans_foo (a INT);

SAVEPOINT one;

DROP TABLE "trans_foo";

CREATE TABLE trans_bar (a INT);

ROLLBACK TO SAVEPOINT one;

RELEASE SAVEPOINT one;

SAVEPOINT two;

CREATE TABLE trans_baz (a INT);

RELEASE SAVEPOINT two;

DROP TABLE "trans_foobar";

CREATE TABLE trans_barbaz (a INT);

COMMIT;

SELECT * FROM trans_foo;

SELECT * FROM trans_bar;

SELECT * FROM trans_barbaz;

SELECT * FROM trans_baz;

BEGIN;

INSERT INTO trans_foo VALUES (1);

SAVEPOINT one;

INSERT INTO trans_bar VALUES (1);

ROLLBACK TO SAVEPOINT one;

RELEASE SAVEPOINT one;

SAVEPOINT two;

INSERT INTO trans_barbaz VALUES (1);

RELEASE SAVEPOINT two;

SAVEPOINT three;

SAVEPOINT four;

INSERT INTO trans_foo VALUES (2);

RELEASE SAVEPOINT four;

ROLLBACK TO SAVEPOINT three;

RELEASE SAVEPOINT three;

INSERT INTO trans_foo VALUES (3);

COMMIT;

SELECT * FROM trans_foo;

SELECT * FROM trans_barbaz;

BEGIN;

SAVEPOINT one;

SELECT trans_foo;

ROLLBACK TO SAVEPOINT one;

RELEASE SAVEPOINT one;

SAVEPOINT two;

CREATE TABLE savepoints (a INT);

SAVEPOINT three;

INSERT INTO savepoints VALUES (1);

SAVEPOINT four;

INSERT INTO savepoints VALUES (2);

SAVEPOINT five;

INSERT INTO savepoints VALUES (3);

ROLLBACK TO SAVEPOINT five;

COMMIT;

COMMIT;

SELECT * FROM savepoints;

BEGIN;

SAVEPOINT one;

DELETE FROM savepoints WHERE a = 1;

RELEASE SAVEPOINT one;

SAVEPOINT two;

DELETE FROM savepoints WHERE a = 1;

SAVEPOINT three;

DELETE FROM savepoints WHERE a = 2;

ROLLBACK;

COMMIT;

SELECT * FROM savepoints;

BEGIN;

INSERT INTO savepoints VALUES (4);

SAVEPOINT one;

INSERT INTO savepoints VALUES (5);

SELECT trans_foo;

COMMIT;

SELECT * FROM savepoints;

BEGIN;

INSERT INTO savepoints VALUES (6);

SAVEPOINT one;

INSERT INTO savepoints VALUES (7);

RELEASE SAVEPOINT one;

INSERT INTO savepoints VALUES (8);

COMMIT;

SELECT
  a.xmin = b.xmin
FROM
  savepoints AS a,
  savepoints AS b
WHERE
  a.a = 6 AND b.a = 8;

SELECT
  a.xmin = b.xmin
FROM
  savepoints AS a,
  savepoints AS b
WHERE
  a.a = 6 AND b.a = 7;

BEGIN;

INSERT INTO savepoints VALUES (9);

SAVEPOINT one;

INSERT INTO savepoints VALUES (10);

ROLLBACK TO SAVEPOINT one;

INSERT INTO savepoints VALUES (11);

COMMIT;

SELECT a FROM savepoints WHERE a IN (9, 10, 11);

SELECT
  a.xmin = b.xmin
FROM
  savepoints AS a,
  savepoints AS b
WHERE
  a.a = 9 AND b.a = 11;

BEGIN;

INSERT INTO savepoints VALUES (12);

SAVEPOINT one;

INSERT INTO savepoints VALUES (13);

SAVEPOINT two;

INSERT INTO savepoints VALUES (14);

ROLLBACK TO SAVEPOINT one;

INSERT INTO savepoints VALUES (15);

SAVEPOINT two;

INSERT INTO savepoints VALUES (16);

SAVEPOINT three;

INSERT INTO savepoints VALUES (17);

COMMIT;

SELECT a FROM savepoints WHERE a BETWEEN 12 AND 17;

BEGIN;

INSERT INTO savepoints VALUES (18);

SAVEPOINT one;

INSERT INTO savepoints VALUES (19);

SAVEPOINT two;

INSERT INTO savepoints VALUES (20);

ROLLBACK TO SAVEPOINT one;

INSERT INTO savepoints VALUES (21);

ROLLBACK TO SAVEPOINT one;

INSERT INTO savepoints VALUES (22);

COMMIT;

SELECT a FROM savepoints WHERE a BETWEEN 18 AND 22;

DROP TABLE "savepoints";

SAVEPOINT one;

ROLLBACK TO SAVEPOINT one;

RELEASE SAVEPOINT one;

BEGIN;

SAVEPOINT one;

SELECT 0 / 0;

SAVEPOINT two;

RELEASE SAVEPOINT one;

ROLLBACK TO SAVEPOINT one;

SELECT 1;

COMMIT;

SELECT 1;

BEGIN;

DECLARE "c" CURSOR FOR SELECT unique2 FROM tenk1 ORDER BY unique2;;

SAVEPOINT one;

FETCH FORWARD 10 FROM c;

ROLLBACK TO SAVEPOINT one;

FETCH FORWARD 10 FROM c;

RELEASE SAVEPOINT one;

FETCH FORWARD 10 FROM c;

CLOSE c;

DECLARE "c" CURSOR FOR SELECT unique2 / 0 FROM tenk1 ORDER BY unique2;;

SAVEPOINT two;

FETCH FORWARD 10 FROM c;

ROLLBACK TO SAVEPOINT two;

FETCH FORWARD 10 FROM c;

ROLLBACK TO SAVEPOINT two;

RELEASE SAVEPOINT two;

FETCH FORWARD 10 FROM c;

COMMIT;

SELECT * FROM xacttest;

CREATE OR REPLACE FUNCTION max_xacttest()
RETURNS SMALLINT
LANGUAGE "sql"
AS 'select max(a) from xacttest'
STABLE;

BEGIN;

UPDATE xacttest SET a = max_xacttest() + 10 WHERE a > 0;

SELECT * FROM xacttest;

ROLLBACK;

CREATE OR REPLACE FUNCTION max_xacttest()
RETURNS SMALLINT
LANGUAGE "sql"
AS 'select max(a) from xacttest'
VOLATILE;

BEGIN;

UPDATE xacttest SET a = max_xacttest() + 10 WHERE a > 0;

SELECT * FROM xacttest;

ROLLBACK;

CREATE OR REPLACE FUNCTION max_xacttest()
RETURNS SMALLINT
LANGUAGE "plpgsql"
AS 'begin return max(a) from xacttest; end'
STABLE;

BEGIN;

UPDATE xacttest SET a = max_xacttest() + 10 WHERE a > 0;

SELECT * FROM xacttest;

ROLLBACK;

CREATE OR REPLACE FUNCTION max_xacttest()
RETURNS SMALLINT
LANGUAGE "plpgsql"
AS 'begin return max(a) from xacttest; end'
VOLATILE;

BEGIN;

UPDATE xacttest SET a = max_xacttest() + 10 WHERE a > 0;

SELECT * FROM xacttest;

ROLLBACK;

BEGIN;

SAVEPOINT x;

CREATE TABLE koju (a INT UNIQUE);

INSERT INTO koju VALUES (1);

INSERT INTO koju VALUES (1);

ROLLBACK TO SAVEPOINT x;

CREATE TABLE koju (a INT UNIQUE);

INSERT INTO koju VALUES (1);

INSERT INTO koju VALUES (1);

ROLLBACK;

DROP TABLE "trans_foo";

DROP TABLE "trans_baz";

DROP TABLE "trans_barbaz";

CREATE FUNCTION inverse(INT)
RETURNS DOUBLE PRECISION
AS '
begin
  analyze revalidate_bug;
  return 1::float8/$1;
exception
  when division_by_zero then return 0;
end'
LANGUAGE "plpgsql"
VOLATILE;

CREATE TABLE revalidate_bug (c DOUBLE PRECISION UNIQUE);

INSERT INTO revalidate_bug VALUES (1);

INSERT INTO revalidate_bug VALUES (inverse(0));

DROP TABLE "revalidate_bug";

DROP FUNCTION inverse(INT);

BEGIN;

SAVEPOINT x;

CREATE TABLE trans_abc (a INT);

INSERT INTO trans_abc VALUES (5);

INSERT INTO trans_abc VALUES (10);

DECLARE "foo" CURSOR FOR SELECT * FROM trans_abc;;

FETCH NEXT FROM foo;

ROLLBACK TO SAVEPOINT x;

FETCH NEXT FROM foo;

COMMIT;

BEGIN;

CREATE TABLE trans_abc (a INT);

INSERT INTO trans_abc VALUES (5);

INSERT INTO trans_abc VALUES (10);

INSERT INTO trans_abc VALUES (15);

DECLARE "foo" CURSOR FOR SELECT * FROM trans_abc;;

FETCH NEXT FROM foo;

SAVEPOINT x;

FETCH NEXT FROM foo;

ROLLBACK TO SAVEPOINT x;

FETCH NEXT FROM foo;

ROLLBACK;

CREATE FUNCTION invert(x DOUBLE PRECISION)
RETURNS DOUBLE PRECISION
LANGUAGE "plpgsql"
AS ' begin return 1/x; end ';

CREATE FUNCTION create_temp_tab()
RETURNS TEXT
LANGUAGE "plpgsql"
AS '
BEGIN
  CREATE TEMP TABLE new_table (f1 float8);
  -- case of interest is that we fail while holding an open
  -- relcache reference to new_table
  INSERT INTO new_table SELECT invert(0.0);
  RETURN ''foo'';
END ';

BEGIN;

DECLARE "ok" CURSOR FOR SELECT * FROM int8_tbl;;

DECLARE "ctt" CURSOR FOR SELECT create_temp_tab();;

FETCH NEXT FROM ok;

SAVEPOINT s1;

FETCH NEXT FROM ok;

FETCH NEXT FROM ctt;

ROLLBACK TO SAVEPOINT s1;

FETCH NEXT FROM ok;

FETCH NEXT FROM ctt;

COMMIT;

DROP FUNCTION create_temp_tab();

DROP FUNCTION invert(DOUBLE PRECISION);

CREATE TABLE trans_abc (a INT);

SET default_transaction_read_only = 'on';

START TRANSACTION ISOLATION LEVEL REPEATABLE READ READ WRITE DEFERRABLE;

SHOW "transaction_isolation";

SHOW "transaction_read_only";

SHOW "transaction_deferrable";

INSERT INTO trans_abc VALUES (1);

INSERT INTO trans_abc VALUES (2);

COMMIT AND CHAIN;

SHOW "transaction_isolation";

SHOW "transaction_read_only";

SHOW "transaction_deferrable";

INSERT INTO trans_abc VALUES ('error');

INSERT INTO trans_abc VALUES (3);

COMMIT AND CHAIN;

SHOW "transaction_isolation";

SHOW "transaction_read_only";

SHOW "transaction_deferrable";

INSERT INTO trans_abc VALUES (4);

COMMIT;

START TRANSACTION ISOLATION LEVEL REPEATABLE READ READ WRITE DEFERRABLE;

SHOW "transaction_isolation";

SHOW "transaction_read_only";

SHOW "transaction_deferrable";

SAVEPOINT x;

INSERT INTO trans_abc VALUES ('error');

COMMIT AND CHAIN;

SHOW "transaction_isolation";

SHOW "transaction_read_only";

SHOW "transaction_deferrable";

INSERT INTO trans_abc VALUES (5);

COMMIT;

START TRANSACTION ISOLATION LEVEL REPEATABLE READ READ WRITE DEFERRABLE;

SHOW "transaction_isolation";

SHOW "transaction_read_only";

SHOW "transaction_deferrable";

SAVEPOINT x;

COMMIT AND CHAIN;

SHOW "transaction_isolation";

SHOW "transaction_read_only";

SHOW "transaction_deferrable";

COMMIT;

START TRANSACTION ISOLATION LEVEL READ COMMITTED READ WRITE DEFERRABLE;

SHOW "transaction_isolation";

SHOW "transaction_read_only";

SHOW "transaction_deferrable";

SAVEPOINT x;

COMMIT AND CHAIN;

SHOW "transaction_isolation";

SHOW "transaction_read_only";

SHOW "transaction_deferrable";

COMMIT;

START TRANSACTION ISOLATION LEVEL SERIALIZABLE READ WRITE NOT DEFERRABLE;

SHOW "transaction_isolation";

SHOW "transaction_read_only";

SHOW "transaction_deferrable";

INSERT INTO trans_abc VALUES (6);

ROLLBACK AND CHAIN;

SHOW "transaction_isolation";

SHOW "transaction_read_only";

SHOW "transaction_deferrable";

INSERT INTO trans_abc VALUES ('error');

ROLLBACK AND CHAIN;

SHOW "transaction_isolation";

SHOW "transaction_read_only";

SHOW "transaction_deferrable";

ROLLBACK;

COMMIT AND CHAIN;

ROLLBACK AND CHAIN;

SELECT * FROM trans_abc ORDER BY 1;

RESET default_transaction_read_only;

DROP TABLE "trans_abc";

CREATE TEMPORARY TABLE i_table (f1 INT);

SELECT 3;

SELECT * FROM i_table;

SELECT 1 / 0;

SELECT * FROM i_table;

ROLLBACK;

COMMIT;

ROLLBACK;

ROLLBACK;

ROLLBACK;

INSERT INTO i_table VALUES (5);

COMMIT;

INSERT INTO i_table VALUES (6);

ROLLBACK;

SELECT 1 / 0;

SELECT 2;

SELECT * FROM i_table;

ROLLBACK;

VACUUM;

VACUUM;

SAVEPOINT sp;

SAVEPOINT sp;

SELECT 2;

SELECT 3;

COMMIT;

COMMIT AND CHAIN;

SHOW "transaction_read_only";

ROLLBACK AND CHAIN;

SHOW "transaction_read_only";

CREATE TABLE trans_abc (a INT);

COMMIT AND CHAIN;

ROLLBACK AND CHAIN;

COMMIT;

ROLLBACK;

COMMIT AND CHAIN;

SHOW "transaction_isolation";

COMMIT;

ROLLBACK AND CHAIN;

SHOW "transaction_isolation";

ROLLBACK;

SET default_transaction_isolation = 'read committed';

COMMIT AND CHAIN;

SHOW "transaction_isolation";

ROLLBACK AND CHAIN;

SHOW "transaction_isolation";

RESET default_transaction_isolation;

SELECT * FROM trans_abc ORDER BY 1;

DROP TABLE "trans_abc";

BEGIN ISOLATION LEVEL REPEATABLE READ;

SET TRANSACTION SNAPSHOT 'Incorrect Identifier';

ROLLBACK;

BEGIN ISOLATION LEVEL REPEATABLE READ;

SET TRANSACTION SNAPSHOT 'FFF-FFF-F';

ROLLBACK;

BEGIN;

SELECT 1 / 0;

ROLLBACK TO SAVEPOINT x;
